--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ vei-eval = "vei.cli.vei_eval:app"
 vei-eval-frontier = "vei.cli.vei_eval_frontier:app"
 vei-report = "vei.cli.vei_report:app"
 vei-visualize = "vei.cli.vei_visualize:app"
+vei-det = "vei.cli.vei_det_pipeline:app"
 
 [tool.setuptools.packages.find]
 where = ["."]
