--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,16 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
-        cache: "pip"
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
 
       - name: Setup
         run: make setup
+
+      - name: Git Dependency Smoke
+        run: ./tools/git_dependency_smoke.sh "$GITHUB_WORKSPACE"
 
       - name: Check
         run: make check
